# rdvcmake

./: .gitignore  README.md  readme.sh
cmake-best-pratices/c01-demarrer-cmake/01-cmake-version/: readme.sh
cmake-best-pratices/c01-demarrer-cmake/02-cmake-gui-grouped/: readme.sh
cmake-best-pratices/c01-demarrer-cmake/cmake-function/: readme.sh
cmake-best-pratices/c01-demarrer-cmake/cmake-list/: readme.sh
cmake-best-pratices/c01-demarrer-cmake/cmake-macro/: CMakeLists.txt
cmake-best-pratices/c01-demarrer-cmake/cmake-option/: CMakeLists.txt  readme.sh
cmake-best-pratices/c01-demarrer-cmake/cmake-option-advanced/: CMakeLists.txt
cmake-best-pratices/c01-demarrer-cmake/cmake-option-dependent/: CMakeLists.txt  readme.sh
cmake-best-pratices/c01-demarrer-cmake/cmake-process-script-mode/cmake/: args.cmake  condition.cmake
cmake-best-pratices/c01-demarrer-cmake/cmake-process-script-mode/data/: doc-cmake-condition-operator.txt  doc-cmake-file-hash-string.txt  doc-cmake-run-script.txt
cmake-best-pratices/c01-demarrer-cmake/policy-example/: readme.sh
cmake-best-pratices/c01-demarrer-cmake/simple-executable/: CMakeLists.txt
cmake-best-pratices/c01/02-cmake-gui-grouped/: CMakeLists.txt
cmake-best-pratices/c01/03-cmake-gui-advanced/: CMakeLists.txt  readme.sh
cmake-best-pratices/c01/cmake-command-mode/: readme.sh
cmake-best-pratices/c01/cmake-command-mode/data/: file-input.txt
cmake-best-pratices/c01/cmake-function/: CMakeLists.txt
cmake-best-pratices/c01/cmake-list/: CMakeLists.txt
cmake-best-pratices/c01/cmake-loop/: CMakeLists.txt  readme.sh
cmake-best-pratices/c01/cmake-macro/: readme.sh
cmake-best-pratices/c01/cmake-option-advanced/: readme.sh
cmake-best-pratices/c01/cmake-process-script-mode/: readme.sh
cmake-best-pratices/c01/cmake-process-script-mode/cmake/: file.cmake  math.cmake  process.cmake  string.cmake  variable.cmake
cmake-best-pratices/c01/cmake-process-script-mode/data/: doc-cpp-cmake-essential.txt  file-input.txt
cmake-best-pratices/c01/cmake-variable-watch/: CMakeLists.txt  readme.sh
cmake-best-pratices/c01/policy-example/: CMakeLists.txt
cmake-best-pratices/c01/policy-example/src/: main.cpp
cmake-best-pratices/c01/simple-executable/: readme.sh
cmake-best-pratices/c01/simple-executable/src/: main.cpp
cmake-best-pratices/c08-executer-taches-personnalisees-cmake/add-custom-command-output-append/: CMakeLists.txt  readme.sh
cmake-best-pratices/c08-executer-taches-personnalisees-cmake/add-custom-command-output-depends/: CMakeLists.txt  version.hpp.in
cmake-best-pratices/c08-executer-taches-personnalisees-cmake/add-custom-command-output-working-directory/: CMakeLists.txt
cmake-best-pratices/c08-executer-taches-personnalisees-cmake/add-custom-command-output/src/: main.cpp
cmake-best-pratices/c08-executer-taches-personnalisees-cmake/add-custom-command-target-pre-build/: CMakeLists.txt  readme.sh
cmake-best-pratices/c08-executer-taches-personnalisees-cmake/add-custom-target-command/: readme.sh
cmake-best-pratices/c08-executer-taches-personnalisees-cmake/add-custom-target-command/src/: main.cpp
cmake-best-pratices/c08-executer-taches-personnalisees-cmake/add-subdirectory/: CMakeLists.txt  readme.sh
cmake-best-pratices/c08-executer-taches-personnalisees-cmake/add-subdirectory/tools/: CMakeLists.txt  tools.hpp
cmake-best-pratices/c08-executer-taches-personnalisees-cmake/chaining-custom-commands-example/: readme.sh
cmake-best-pratices/c08-executer-taches-personnalisees-cmake/configure-file-example/: CMakeLists.txt  readme.sh  version.hpp.in
cmake-best-pratices/c08-executer-taches-personnalisees-cmake/configure-file-example-option/: CMakeLists.txt
cmake-best-pratices/c08-executer-taches-personnalisees-cmake/configure-file-example/src/: main.cpp
cmake-best-pratices/c08-executer-taches-personnalisees-cmake/create-source-file-example/: CMakeLists.txt
cmake-best-pratices/c08-executer-taches-personnalisees-cmake/create-source-file-example/cmake/: WriteMain.cmake
cmake-best-pratices/c08-executer-taches-personnalisees-cmake/find-package/src/: main.cpp
cmake-best-pratices/c08-executer-taches-personnalisees-cmake/target-compile-definitions/: CMakeLists.txt  readme.sh
cmake-best-pratices/c08/add-custom-command-output/: CMakeLists.txt  readme.sh  version.hpp.in
cmake-best-pratices/c08/add-custom-command-output-append/src/: main.cpp
cmake-best-pratices/c08/add-custom-command-output-depends/: readme.sh
cmake-best-pratices/c08/add-custom-command-output-depends/src/: main.cpp
cmake-best-pratices/c08/add-custom-command-output-working-directory/: readme.sh  version.hpp.in
cmake-best-pratices/c08/add-custom-command-output-working-directory/src/: main.cpp
cmake-best-pratices/c08/add-custom-command-target-post-build/: CMakeLists.txt  readme.sh
cmake-best-pratices/c08/add-custom-command-target-post-build/src/: main.cpp
cmake-best-pratices/c08/add-custom-target-command/: CMakeLists.txt
cmake-best-pratices/c08/add-custom-target-depends/: CMakeLists.txt  readme.sh
cmake-best-pratices/c08/add-custom-target-depends/src/: main.cpp
cmake-best-pratices/c08/add-subdirectory/main/: CMakeLists.txt  main.cpp
cmake-best-pratices/c08/add-subdirectory/tools/: tools.cpp
cmake-best-pratices/c08/chaining-custom-commands-example/: CMakeLists.txt
cmake-best-pratices/c08/chaining-custom-commands-example/src/: main.cpp
cmake-best-pratices/c08/configure-file-example-option/: readme.sh
cmake-best-pratices/c08/create-source-file-example/: cmd-cmake-build-target-clean.bat  cmd-cmake-run.bat  message.txt
cmake-best-pratices/c08/execute-process/: CMakeLists.txt  readme.sh
cmake-best-pratices/c08/execute-process/src/: main.cpp
cmake-best-pratices/c08/find-package/: CMakeLists.txt  readme.sh
cmake-best-pratices/unix/c08/chaining-custom-commands-example/: CMakeLists.txt  cmd-cmake-build-clean-first-verbose.sh  cmd-cmake-build-clean-first.sh  cmd-cmake-build-verbose.sh  cmd-cmake-build.sh  cmd-cmake-run.sh  cmd-cmake-source-build.sh
cmake-best-pratices/unix/c08/chaining-custom-commands-example/src/: main.cpp
(+11 files in other folders)
